--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,15 +57,22 @@ body {
     color: white;
   }
   
-  .saveBtn {
+  .clearBtn {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     background-color: #06AED5;
     color: white;
   }
+
+  .saveBtn{
+    border-left: 1px solid black;
+    background-color: #06AED5;
+    color: white;
+  }
+
   
-  .saveBtn i:hover {
+  .saveBtn:hover, .clearBtn:hover {
     font-size: 20px;
     transition: all .3s ease-in-out;
   }
