--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,39 @@
-body {
+  
+  .row {
+    flex-wrap: wrap;
+    flex-direction: row;
+    white-space: pre-wrap;
+    height: 80px;
+    border-top: 1px solid white;;
+  }
+  
+  .clearBtn {
+    border-left: 1px solid black;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #06AED5;
+    color: white;
+    padding:20px;
+  }
+
+  .saveBtn{
+    border-left: 1px solid black;
+    background-color: #06AED5;
+    color: white;
+    padding:20px;
+  }
+
+  
+  .saveBtn:hover, .clearBtn:hover {
+    transition: all .3s ease-in-out;
+    color: #000000;
+  }
+  
+  .input-group-text, .form {
+    border: none;
+  }
+
+  body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
@@ -42,37 +77,3 @@ body {
     border-top: 1px dashed #000000;
   }
   
-  .past {
-    background-color: #d3d3d3;
-    color: white;
-  }
-  
-  .present {
-    background-color: #ff6961;
-    color: white;
-  }
-  
-  .future {
-    background-color: #77dd77;
-    color: white;
-  }
-  
-  .clearBtn {
-    border-left: 1px solid black;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background-color: #06AED5;
-    color: white;
-  }
-
-  .saveBtn{
-    border-left: 1px solid black;
-    background-color: #06AED5;
-    color: white;
-  }
-
-  
-  .saveBtn:hover, .clearBtn:hover {
-    font-size: 20px;
-    transition: all .3s ease-in-out;
-  }
